--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.0",
     "vant": "^3.6.2",
-    "vue": "^3.2.13",
+    "vue": "^3.2.37",
+    "vue-cookies": "^1.8.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
